tests/compilefail04.out
[1mtests/compilefail04.pas:9:10: [0m[1m[91merror:[0m Cannot compare Boolean to non-Boolean
     9 | 	if r >= b then