tests/compilefail04.pas
program compilefail04(output);

var b:boolean; i:integer; r:real;

begin
	b:=true;
	i:=9;
	r:=7.2;
	if r >= b then 
		writeln('hi');
end.
